// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card accepts className override 1`] = `
<View
  className="bg-blue-50"
  style={
    {
      "backgroundColor": "white",
      "borderColor": "#e7e5e4",
      "borderRadius": 14,
      "borderWidth": 1,
      "marginHorizontal": 16,
      "padding": 14,
    }
  }
>
  <Text>
    Custom
  </Text>
</View>
`;

exports[`Card renders children with default styling 1`] = `
<View
  style={
    {
      "backgroundColor": "white",
      "borderColor": "#e7e5e4",
      "borderRadius": 14,
      "borderWidth": 1,
      "marginHorizontal": 16,
      "padding": 14,
    }
  }
>
  <Text>
    Hello
  </Text>
</View>
`;
